js/js.translator/testData/incremental/invalidation/genericInlineFunctions/lib1/l1.6.kt
inline fun <T> foo(x: T, y: Any = 99) : T {
    konst tmp = y as? T
    if (tmp != null) {
        return tmp
    }
    return x
}
